tests/unit/default/syntax-error/025-create-table-parens-name-colon-type-parens-num.e.t
---- IN ----
+%table(id:int(10
---- OUT ----
---- ERR ----
syntax: expected `)` after `+%table(id:int(10` instead of EOL at position 17 - at line 1
---- EXIT ----
1
